exports[`BoardSpace board position classnames renders (row=0, col=0) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=1) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=2) correctly 1`] = `
<div
  className="board-space first-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=3) correctly 1`] = `
<div
  className="board-space highlight first-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=4) correctly 1`] = `
<div
  className="board-space first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=5) correctly 1`] = `
<div
  className="board-space actual highlight first-row first-col goal"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-star" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=0, col=6) correctly 1`] = `
<div
  className="board-space actual first-row last-col goal"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-star" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=0, col=7) correctly 1`] = `
<div
  className="board-space highlight first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=8) correctly 1`] = `
<div
  className="board-space first-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=9) correctly 1`] = `
<div
  className="board-space highlight first-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=10) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=0, col=11) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=0) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=1) correctly 1`] = `
<div
  className="board-space first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=2) correctly 1`] = `
<div
  className="board-space actual highlight first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=3) correctly 1`] = `
<div
  className="board-space actual first-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=4) correctly 1`] = `
<div
  className="board-space actual highlight first-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=7) correctly 1`] = `
<div
  className="board-space actual first-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=8) correctly 1`] = `
<div
  className="board-space actual highlight first-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=9) correctly 1`] = `
<div
  className="board-space actual first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=10) correctly 1`] = `
<div
  className="board-space highlight first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=1, col=11) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=0) correctly 1`] = `
<div
  className="board-space first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=1) correctly 1`] = `
<div
  className="board-space actual highlight first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=3) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=4) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=5) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=6) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=7) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=8) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=10) correctly 1`] = `
<div
  className="board-space actual first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=2, col=11) correctly 1`] = `
<div
  className="board-space highlight first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=0) correctly 1`] = `
<div
  className="board-space actual highlight first-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=2) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=3) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=4) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=7) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=8) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=9) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=3, col=11) correctly 1`] = `
<div
  className="board-space actual first-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=0) correctly 1`] = `
<div
  className="board-space actual first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=1) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=3) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=4) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=5) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=6) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=7) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=8) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=10) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=4, col=11) correctly 1`] = `
<div
  className="board-space actual highlight last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=5, col=0) correctly 1`] = `
<div
  className="board-space actual highlight first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=5, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=5, col=2) correctly 1`] = `
<div
  className="board-space actual highlight knight host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=3) correctly 1`] = `
<div
  className="board-space actual pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=4) correctly 1`] = `
<div
  className="board-space actual highlight pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=5) correctly 1`] = `
<div
  className="board-space actual pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=6) correctly 1`] = `
<div
  className="board-space actual highlight pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=7) correctly 1`] = `
<div
  className="board-space actual pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=8) correctly 1`] = `
<div
  className="board-space actual highlight pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=9) correctly 1`] = `
<div
  className="board-space actual knight host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=5, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=5, col=11) correctly 1`] = `
<div
  className="board-space actual last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=0) correctly 1`] = `
<div
  className="board-space actual first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=1) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=3) correctly 1`] = `
<div
  className="board-space actual highlight knight host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=4) correctly 1`] = `
<div
  className="board-space actual pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=5) correctly 1`] = `
<div
  className="board-space actual highlight pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=6) correctly 1`] = `
<div
  className="board-space actual pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=7) correctly 1`] = `
<div
  className="board-space actual highlight pawn host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=8) correctly 1`] = `
<div
  className="board-space actual knight host"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=6, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=10) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=6, col=11) correctly 1`] = `
<div
  className="board-space actual highlight last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=0) correctly 1`] = `
<div
  className="board-space actual highlight first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=2) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=3) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=4) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=7) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=8) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=9) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=7, col=11) correctly 1`] = `
<div
  className="board-space actual last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=0) correctly 1`] = `
<div
  className="board-space actual first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=1) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=3) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=4) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=5) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=6) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=7) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=8) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=10) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=8, col=11) correctly 1`] = `
<div
  className="board-space actual highlight last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=0) correctly 1`] = `
<div
  className="board-space actual highlight first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=2) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=3) correctly 1`] = `
<div
  className="board-space actual knight opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=4) correctly 1`] = `
<div
  className="board-space actual highlight pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=5) correctly 1`] = `
<div
  className="board-space actual pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=6) correctly 1`] = `
<div
  className="board-space actual highlight pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=7) correctly 1`] = `
<div
  className="board-space actual pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=8) correctly 1`] = `
<div
  className="board-space actual highlight knight opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=9, col=9) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=9, col=11) correctly 1`] = `
<div
  className="board-space actual last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=10, col=0) correctly 1`] = `
<div
  className="board-space actual first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=10, col=1) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=10, col=2) correctly 1`] = `
<div
  className="board-space actual knight opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=3) correctly 1`] = `
<div
  className="board-space actual highlight pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=4) correctly 1`] = `
<div
  className="board-space actual pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=5) correctly 1`] = `
<div
  className="board-space actual highlight pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=6) correctly 1`] = `
<div
  className="board-space actual pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=7) correctly 1`] = `
<div
  className="board-space actual highlight pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=8) correctly 1`] = `
<div
  className="board-space actual pawn opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-pawn" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=9) correctly 1`] = `
<div
  className="board-space actual highlight knight opponent"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-tower" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=10, col=10) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=10, col=11) correctly 1`] = `
<div
  className="board-space actual highlight last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=0) correctly 1`] = `
<div
  className="board-space actual highlight first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=2) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=3) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=4) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=7) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=8) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=9) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=11, col=11) correctly 1`] = `
<div
  className="board-space actual last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=0) correctly 1`] = `
<div
  className="board-space actual first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=1) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=3) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=4) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=5) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=6) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=7) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=8) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=10) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=12, col=11) correctly 1`] = `
<div
  className="board-space actual highlight last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=0) correctly 1`] = `
<div
  className="board-space actual highlight last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=1) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=2) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=3) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=4) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=7) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=8) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=9) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=10) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=13, col=11) correctly 1`] = `
<div
  className="board-space actual last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=0) correctly 1`] = `
<div
  className="board-space last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=1) correctly 1`] = `
<div
  className="board-space actual highlight last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=2) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=3) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=4) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=5) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=6) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=7) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=8) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=9) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=10) correctly 1`] = `
<div
  className="board-space actual last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=14, col=11) correctly 1`] = `
<div
  className="board-space highlight last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=0) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=1) correctly 1`] = `
<div
  className="board-space last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=2) correctly 1`] = `
<div
  className="board-space actual highlight last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=3) correctly 1`] = `
<div
  className="board-space actual last-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=4) correctly 1`] = `
<div
  className="board-space actual highlight last-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=5) correctly 1`] = `
<div
  className="board-space actual"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=6) correctly 1`] = `
<div
  className="board-space actual highlight"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=7) correctly 1`] = `
<div
  className="board-space actual last-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=8) correctly 1`] = `
<div
  className="board-space actual highlight last-row"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=9) correctly 1`] = `
<div
  className="board-space actual last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=10) correctly 1`] = `
<div
  className="board-space highlight last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=15, col=11) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=0) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=1) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=2) correctly 1`] = `
<div
  className="board-space last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=3) correctly 1`] = `
<div
  className="board-space highlight last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=4) correctly 1`] = `
<div
  className="board-space last-row first-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=5) correctly 1`] = `
<div
  className="board-space actual highlight last-row first-col goal"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-star" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=16, col=6) correctly 1`] = `
<div
  className="board-space actual last-row last-col goal"
  onClick={[Function]}>
  <span
    className="glyphicon glyphicon-star" />
</div>
`;

exports[`BoardSpace board position classnames renders (row=16, col=7) correctly 1`] = `
<div
  className="board-space highlight last-row last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=8) correctly 1`] = `
<div
  className="board-space last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=9) correctly 1`] = `
<div
  className="board-space highlight last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=10) correctly 1`] = `
<div
  className="board-space first-row last-row first-col last-col"
  onClick={[Function]} />
`;

exports[`BoardSpace board position classnames renders (row=16, col=11) correctly 1`] = `
<div
  className="board-space highlight first-row last-row first-col last-col"
  onClick={[Function]} />
`;
